[package]
links = "implode"
build = "build.rs"
name = "req_art_3d_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.16", features=["derive"]}
byteorder="1.4"
libc = "0.2"
bmp = "0.5"

[build-dependencies]
cc = "1.0"